Feature/service registry endpoint (#12)
* use jwt-validator 1.0.1 and update to use loadbalanced webclient

* update health path

* add port 8061 for cors

* use jwt-validator 1.0.2

* remove cors config and add caffeinecache

* add new authentication password route

---------

Co-authored-by: Sonam Samdupkhangsar <sonamsamdupkhangsar@Sonams-MacBook-Pro.local>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,7 @@ authentication-rest-service:
   root: ${AUTHENTICATION_REST_SERVICE}
   activate: /authentications/activate/
   delete: /authentications/
+  update-no-auth-password: /authentications/noauth/password
 
 jwt-service:
   root: ${JWT_REST_SERVICE}
@@ -57,7 +58,6 @@ hmacKey:
   secretKey: ${HMAC_SECRET}
 
 emailFrom: ${EMAIL_FROM}
-account-activate-link: ${ACCOUNT_ACTIVATE_LINK}
 emailBody: Please click on this link to activate your account
 secretExpire: 2
 
@@ -67,7 +67,7 @@ eureka:
       defaultZone: ${DEFAULT_ZONE}
 
 permitpath:
-  - path: /api/health/*
+  - path: /accounts/api/health/*
   - path: /accounts/active/*/*
     httpMethods: GET
   - path: /accounts/activate/*/*
@@ -83,6 +83,8 @@ permitpath:
   - path: /accounts/validate/secret/*/*
     httpMethods: PUT
   - path: /actuator/info
+  - path: /accounts/authentications/password
+    httpMethods: PUT
 
 # request to create a jwt token for outbound `email` path when any requestcomes into /accounts/(.)* path (regex)
 jwtrequest:
