--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,12 @@ jobs:
           distribution: 'adopt'
 
       - name: Publish package
-        run: mvn -s settings.xml --batch-mode deploy
+        uses: gradle/gradle-build-action@749f47bda3e44aa060e82d7b3ef7e40d953bd629
+        with:
+          arguments: publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          USERNAME: ${{ github.actor }}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v2
@@ -43,7 +45,7 @@ jobs:
           push: true
           tags: ghcr.io/sonamsamdupkhangsar/account-rest-service:latest
           secrets: |
-            GIT_AUTH_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }}
+            USERNAME=${{ github.actor }}
             PERSONAL_ACCESS_TOKEN=${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Install doctl
