--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ publishing {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/sonamsamdupkhangsar/account-rest-service"
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
+                username = System.getenv("USERNAME")
                 password = System.getenv("GITHUB_TOKEN")
             }
         }
