--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:9001
+          issuer-uri: ${ISSUER_URL}
 
 user-rest-service:
     root: ${USER_REST_SERVICE}
@@ -43,11 +43,6 @@ authentication-rest-service:
   delete: /authentications/
   update-no-auth-password: /authentications/noauth/password
 
-jwt-service:
-  root: ${JWT_REST_SERVICE}
-  public-key-id: /jwts/publickeys/{keyId}
-  accesstoken: /jwts/accesstoken
-
 email-rest-service:
   root: ${EMAIL_REST_SERVICE}
   emails: /emails
@@ -55,6 +50,12 @@ email-rest-service:
 account-rest-service:
   root: ${ACCOUNT_REST_SERVICE}
   activate: /accounts/activate
+
+auth-server:
+  root: http://authorization-server
+  oauth2token:
+    path: /oauth2/token
+    params: ?grant_type=client_credentials
 
 emailFrom: ${EMAIL_FROM}
 emailBody: Please click on this link to activate your account
@@ -84,6 +85,8 @@ permitpath:
   - path: /actuator/info
   - path: /accounts/authentications/password
     httpMethods: PUT
+  - path: /accounts/email/*
+    scopes: message.write
 
 # request to create a jwt token for outbound `email` path when any requestcomes into /accounts/(.)* path (regex)
 jwtrequest:
@@ -115,3 +118,7 @@ jwtrequest:
       option: request
       scopes: message.read message.write
       base64EncodedClientIdSecret: b2F1dGgtY2xpZW50Om9hdXRoLXNlY3JldA==
+
+token:
+  audiences: ${OAUTH_CLIENTS}
+  issuerUri: ${ISSUER_URL}
