use https authorization server

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -29,6 +29,6 @@ EMAIL_FROM: ${EMAIL_FROM_USER}
 # ISSUER_URL here is used for pulling the public certs from authorization-server for token validation
 #ISSUER_URL:  http://10.0.0.28:9001
 #ISSUER_URL: http://authorization-server:9001
-ISSUER_URL: http://my-server:9001
+ISSUER_URL: http://api-gateway:9001/issuer #http://my-server:9001
 
 OAUTH_CLIENTS: oauth-client
