--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
     mavenCentral()
     maven { url 'https://repo.spring.io/milestone' }
     maven {
-        url = uri("https://maven.pkg.github.com/sonamsamdupkhangsar/jwt-validator")
+        url = uri("https://maven.pkg.github.com/sonamsamdupkhangsar/token-filter")
         credentials {
             username = System.getenv("USERNAME")
             password = System.getenv("PERSONAL_ACCESS_TOKEN")
@@ -37,7 +37,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
     implementation 'org.postgresql:postgresql:42.3.7'
-    implementation 'me.sonam:jwt-validator:1.0.4-SNAPSHOT'
+    implementation 'me.sonam:token-filter:1.0.0-SNAPSHOT'
     implementation 'com.github.ben-manes.caffeine:caffeine:3.1.6'
     implementation 'io.projectreactor:reactor-test'
     testImplementation 'io.r2dbc:r2dbc-h2:1.0.0.RELEASE'
