--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -23,11 +23,12 @@ AUTHENTICATION_REST_SERVICE: http://authentication-rest-service
 EMAIL_REST_SERVICE: http://email-rest-service
 # go through gateway for account-rest-service
 ACCOUNT_REST_SERVICE: http://localhost:8080
-JWT_REST_SERVICE: http://jwt-rest-service
-
-hmacKey:
-  clientId: account-rest-service
-  algorithm: HmacMD5
-  secretKey: mysecret
 
 EMAIL_FROM: ${EMAIL_FROM_USER}
+
+# ISSUER_URL here is used for pulling the public certs from authorization-server for token validation
+#ISSUER_URL:  http://10.0.0.28:9001
+#ISSUER_URL: http://authorization-server:9001
+ISSUER_URL: http://api-gateway:9001/issuer #http://my-server:9001
+
+OAUTH_CLIENTS: oauth-client
