--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -95,6 +95,10 @@ envs:
     value: https://account-rest-service.backend.svc.cluster.local:80
   - name: DEFAULT_ZONE
     value: https://${EUREKA_USER}:${EUREKA_PASSWORD}@${EUREKA_HOST}/eureka
+  - name: ISSUER_URL
+    value: https://authorization.sonam.cloud/issuer
+  - name: OAUTH_CLIENTS
+    value: oauth-client
 
 
 health:
