use token-filter 1.0.1

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -30,6 +30,8 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:9001
+          jwk-set-uri: http://localhost:9000/issuer/.well-known/jwks.json
+          audiences: oauth-client
 
 user-rest-service:
   root: http://localhost:{port}
