--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -22,16 +22,16 @@ USER_REST_SERVICE: http://user-rest-service
 AUTHENTICATION_REST_SERVICE: http://authentication-rest-service
 EMAIL_REST_SERVICE: http://email-rest-service
 # go through gateway for account-rest-service
-ACCOUNT_REST_SERVICE: http://localhost:8080
+ACCOUNT_REST_SERVICE: http://api-gateway:8080
 
 EMAIL_FROM: ${EMAIL_FROM_USER}
 
-# ISSUER_URL here is used for pulling the public certs from authorization-server for token validation
-#ISSUER_URL:  http://10.0.0.28:9001
-#ISSUER_URL: http://authorization-server:9001
-ISSUER_URL: http://api-gateway:9001/issuer #http://my-server:9001
+ISSUER_ADDRESS: http://api-gateway:9001
 
-OAUTH_CLIENTS: oauth-client
-API_GATEWAY: http://api-gateway
+# ISSUER_URI here is used for pulling the public certs from authorization-server for token validation
+ISSUER_URI: ${ISSUER_ADDRESS}/issuer
+OAUTH_AUDIENCES: oauth-client
+JWT_SET_URI: ${ISSUER_ADDRESS}/issuer/.well-known/jwks.json
+
 REQUEST_SCOPES: message.read message.write
 BASE64_CLIENT_ID_SECRET: b2F1dGgtY2xpZW50Om9hdXRoLXNlY3JldA==
