--- a/values-backend.yaml
+++ b/values-backend.yaml
@@ -87,6 +87,8 @@ envs:
     value: https://authorization.sonam.cloud/issuer
   - name: OAUTH_AUDIENCES
     value: oauth-client
+  - name: NEW_RELIC_ENABLED
+    value: false
 
 
 health:
@@ -114,3 +116,7 @@ secretFiles:
         name: BASE64_CLIENT_ID_SECRET
       - key: scopes
         name: REQUEST_SCOPES
+  - file: newrelic-secret
+    keys:
+      - key: newrelic.license_key
+        name: NEW_RELIC_LICENSE_KEY
