--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -50,7 +50,7 @@ auth-server:
   root: http://localhost:9001
   oauth2token:
     path: /oauth2/token
-    params: ?grant_type=client_credentials
+    grantType: client_credentials
 
 email-rest-service:
   root: http://localhost:{port}
