update paths and test case

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -36,4 +36,6 @@ JWT_SET_URI: ${ISSUER_ADDRESS}/issuer/.well-known/jwks.json
 REQUEST_SCOPES: message.read message.write
 BASE64_CLIENT_ID_SECRET: b2F1dGgtY2xpZW50Om9hdXRoLXNlY3JldA==
 NEW_RELIC_ENABLED: false
-API_GATEWAY: http://api-gateway
+API_GATEWAY: http://api-gateway:8080
+
+AUTH_MANAGER_APP_URL: http://localhost:9093
