--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,7 @@ email-rest-service:
 
 account-rest-service:
   root: ${API_GATEWAY}
-  activate: /accounts/activate
+  activate: /accounts/{authenticationId}/active/{secret}
 
 auth-server:
   root: http://authorization-server/issuer
@@ -62,11 +62,13 @@ emailFrom: ${EMAIL_FROM}
 emailBody: Please click on this link to activate your account
 secretExpire: 2
 
+passwordResetPath: ${ISSUER_URI}/password/{email}/{secret}
+
 permitpath:
   - path: /accounts/api/health/*
   - path: /accounts/active/*/*
     httpMethods: GET
-  - path: /accounts/activate/*/*
+  - path: /accounts/*/active/*
     httpMethods: GET
   - path: /accounts/emailactivationlink/*
     httpMethods: PUT
@@ -108,13 +110,13 @@ jwtrequest:
     out: /emails
     accessToken:
       option: forward
-      scopes: message.read, message.write
+      scopes: message.read message.write
       base64EncodedClientIdSecret: ${BASE64_CLIENT_ID_SECRET}
   - in: /accounts/(.)*/(.)*
     out: /emails
     accessToken:
       option: forward
-  - in: /accounts/activate/(.)*/(.)*
+  - in: /accounts/(.)*/active/(.)*
     out: /users/(.)*/active
     accessToken:
       option: request
