change authzmanager link

--- a/src/main/resources/application-kubernetes.yaml
+++ b/src/main/resources/application-kubernetes.yaml
@@ -11,4 +11,4 @@ eureka:
   client:
       enabled: false
 
-AUTH_MANAGER_APP_URL: https://authzmgr.sonam.cloud
+AUTH_MANAGER_APP_URL: https://authzmanager.sonam.cloud
