update local authmanager url to use api-gateway instead of localhost

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -38,4 +38,4 @@ BASE64_CLIENT_ID_SECRET: b2F1dGgtY2xpZW50Om9hdXRoLXNlY3JldA==
 NEW_RELIC_ENABLED: false
 API_GATEWAY: http://api-gateway:8080
 
-AUTH_MANAGER_APP_URL: http://localhost:9093
+AUTH_MANAGER_APP_URL: http://api-gateway:9093
