--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -30,7 +30,7 @@ ISSUER_ADDRESS: http://api-gateway:9001
 
 # ISSUER_URI here is used for pulling the public certs from authorization-server for token validation
 ISSUER_URI: ${ISSUER_ADDRESS}/issuer
-OAUTH_AUDIENCES: oauth-clients, b4dfe3fb-1692-44b8-92ab-366ccc84b539-authzmanager
+OAUTH_AUDIENCES: oauth-client, b4dfe3fb-1692-44b8-92ab-366ccc84b539-authzmanager
 JWT_SET_URI: ${ISSUER_ADDRESS}/issuer/.well-known/jwks.json
 
 REQUEST_SCOPES: message.read message.write
